--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -58,6 +58,8 @@ body {
     color: white;
 }
 
+/*Apply css navigation bar*/
+
 .navbar-nav{
     width: fit-content;
     height: fit-content;
@@ -97,3 +99,225 @@ body {
     position: absolute;
     left: 5%;
 }
+
+/*Apply css home page section*/
+
+.home_page_paragraph{
+    position: absolute;
+    left: 171px;
+    top: 145px;
+}
+
+.home_page_paragraph>div>div:nth-child(1)>h1{
+    font-size:74px;
+    font-weight: 400;
+    font-family: 'Lohit Devanagari',sans-serif;
+}
+
+.home_page_paragraph>div>div:nth-child(2){
+    font-size: 31px;
+    font-weight: 400;
+    font-family: 'Lohit Devanagari',sans-serif;
+}
+
+.home_page_paragraph>div>div:nth-child(2)>p{
+    margin-bottom: 0;
+}
+
+/*Apply Bar Chart */
+
+.chart-wrap {
+    margin-left: 50px;
+    font-family: sans-serif;
+    height: 650px;
+    width: 300px;
+    position: absolute;
+    left: 8%;
+    top: 40%;
+}
+.chart-wrap .title {
+    font-weight: bold;
+    font-size: 1.62em;
+    padding: 0.5em 0 1.8em 0;
+    text-align: center;
+    white-space: nowrap;
+}
+.chart-wrap .title .chart-wrap {
+    margin-left: 50px;
+    font-family: sans-serif;
+    height: 650px;
+    width: 300px;
+}
+.chart-wrap .title .chart-wrap .title {
+    font-weight: bold;
+    font-size: 1.62em;
+    padding: 0.5em 0 1.8em 0;
+    text-align: center;
+    white-space: nowrap;
+}
+.chart-wrap .title .chart-wrap.vertical .grid {
+    transform: translateY(-175px) translateX(175px) rotate(-90deg);
+}
+.chart-wrap .title .chart-wrap.vertical .grid .bar::after {
+    transform: translateY(-50%) rotate(45deg);
+    display: block;
+}
+.chart-wrap .title .chart-wrap.vertical .grid::before,
+.chart-wrap .title .chart-wrap.vertical .grid::after {
+    transform: translateX(-0.2em) rotate(90deg);
+}
+.chart-wrap .title .chart-wrap .grid {
+    position: relative;
+    padding: 5px 0 5px 0;
+    height: 100%;
+    width: 100%;
+    border-left: 2px solid #aaa;
+    background: repeating-linear-gradient(90deg, transparent, transparent 19.5%, rgba(170, 170, 170, 0.7) 20%);
+}
+.chart-wrap .title .chart-wrap .grid::before {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: "0%";
+    position: absolute;
+    left: -0.5em;
+    top: -1.5em;
+}
+.chart-wrap .title .chart-wrap .grid::after {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: "100%";
+    position: absolute;
+    right: -1.5em;
+    top: -1.5em;
+}
+.chart-wrap .title .chart-wrap .bar {
+    width: var(--bar-value);
+    height: 50px;
+    margin: 30px 0;
+    background-color: #f16335;
+    border-radius: 0 3px 3px 0;
+}
+.chart-wrap .title .chart-wrap .bar:hover {
+    opacity: 0.7;
+}
+.chart-wrap .title .chart-wrap .bar::after {
+    content: attr(data-name);
+    margin-left: 100%;
+    padding: 10px;
+    display: inline-block;
+    white-space: nowrap;
+}
+.chart-wrap.vertical .grid {
+    transform: translateY(-175px) translateX(175px) rotate(-90deg);
+}
+.chart-wrap.vertical .grid .bar::after {
+    transform: translateY(-50%) rotate(45deg);
+    display: block;
+}
+.chart-wrap.vertical .grid::before,
+.chart-wrap.vertical .grid::after {
+    transform: translateX(-0.2em) rotate(90deg);
+}
+.chart-wrap .grid {
+    position: relative;
+    padding: 5px 0 5px 0;
+    height: 800px;
+    width: 446px;
+    /*height: 100%;
+    width: 100%;*/
+    border-left: 2px solid #aaa;
+    background: repeating-linear-gradient(90deg, transparent, transparent 19.5%, rgba(170, 170, 170, 0.7) 20%);
+}
+.chart-wrap .grid::before {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: "0%";
+    position: absolute;
+    left: -0.5em;
+    top: -1.5em;
+}
+.chart-wrap .grid::after {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: "100%";
+    position: absolute;
+    right: -1.5em;
+    top: -1.5em;
+}
+.chart-wrap .bar {
+    width: var(--bar-value);
+    height: 50px;
+    margin: 58px 0;
+    background-color: #C77DFF;
+    border-radius: 0 3px 3px 0;
+}
+.chart-wrap .bar:hover {
+    opacity: 0.7;
+}
+.chart-wrap .bar::after {
+    content: attr(data-name);
+    margin-left: 100%;
+    padding: 10px;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.chart-wrap .bar:nth-child(2){
+    background-color: #D9D9D9;
+}
+
+.chart-wrap .bar:nth-child(4){
+    background-color: #D9D9D9;
+}
+
+.chart-wrap .bar:nth-child(6){
+    background-color: #D9D9D9;
+}
+
+.count_details{
+    position: absolute;
+    right: 15%;
+    top: 20%;
+}
+
+.count_details>div{
+    background-color: #C77DFF;
+    width: 333px;
+    height: 139px;
+    border-radius: 10px;
+    margin: 70px;
+    position: relative;
+}
+
+.count_details>div>img{
+    width: 64px;
+    position: absolute;
+    left: 15%;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.count_details_topic{
+    width: fit-content;
+    height: fit-content;
+    position: absolute;
+    right: 20%;
+    top: 20%;
+}
+
+.count{
+    position: absolute;
+    top: 45%;
+    right: 25%;
+}
+
+
+
+
+
+
+
+
+
+
