--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,16 +11,15 @@ h1, p, h2, h3, h4, ul, li, div {
 
 body {
     padding: 0;
-    width: 100vw;
-    height: 100vh;
     overflow: hidden;
     font-family: Roboto;
 }
 
 .loading-page {
+    z-index: 20;
     background: linear-gradient(to bottom, #9d4edd 15%, #c77dff 100%);
-    width: 100vw;
-    height: 100vh;
+    width: 1920px;
+    height: 944px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,9 +38,12 @@ body {
     margin-top: -10px;
 }
 .loading-page .counter hr {
+    position: absolute;
+    top: 130px;
+    left: 0;
     background: white;
     border: none;
-    height: 1px;
+    height: 5px;
 }
 .loading-page .counter {
     position: relative;
@@ -60,6 +62,10 @@ body {
 
 /*Apply css navigation bar*/
 
+#navbar{
+    padding: 0;
+}
+
 .navbar-nav{
     width: fit-content;
     height: fit-content;
@@ -70,9 +76,10 @@ body {
 #navbar-nav>a{
     text-decoration: none;
     color: white;
-    font-size: 31px;
+    font-size: 28px;
     font-family: 'Inria Sans', sans-serif;;
-    font-weight: 400;
+    font-weight: bold;
+    margin-right: 40px;
 }
 
 #navbar-nav>a:last-child>button{
@@ -85,15 +92,12 @@ body {
     border: 0;
 }
 
-.container-fluid{
+#container-fluid{
+    width: 1920px;
+    height: 80px;
     background-color: #9D4EDD;
-    height: 100px;
-    width: 100vw;
 }
 
-#navbar{
-    padding: 0;
-}
 
 #container-fluid>img{
     position: absolute;
@@ -102,10 +106,16 @@ body {
 
 /*Apply css home page section*/
 
+#home_page{
+    width: 100vw;
+    height: 844px;
+    position: relative;
+}
+
 .home_page_paragraph{
     position: absolute;
     left: 171px;
-    top: 145px;
+    top: 50px;
 }
 
 .home_page_paragraph>div>div:nth-child(1)>h1{
@@ -133,7 +143,7 @@ body {
     width: 300px;
     position: absolute;
     left: 8%;
-    top: 40%;
+    top: 35%;
 }
 .chart-wrap .title {
     font-weight: bold;
@@ -275,10 +285,89 @@ body {
 .count_details{
     position: absolute;
     right: 15%;
-    top: 20%;
+    top: 13%;
 }
 
-.count_details>div{
+.card{
+    width: 333px;
+    background-color: #C77DFF;
+    border-radius: 10px;
+}
+
+.row{
+    height: 139px;
+    background-color: #C77DFF;
+    border-radius: 10px;
+}
+
+#customerCard{
+    position: absolute;
+    top: 15%;
+    right: 15%;
+}
+
+#itemCard{
+    position: absolute;
+    top: 45%;
+    right: 15%;
+}
+
+#orderCard{
+    position: absolute;
+    top: 75%;
+    right: 15%;
+}
+
+#customerImg>img{
+    width: 64px;
+    aspect-ratio: 1/1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10%;
+    margin: auto;
+}
+
+#itemImg>img{
+    width: 64px;
+    aspect-ratio: 1/1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10%;
+    margin: auto;
+}
+
+#orderImg>img{
+    width: 64px;
+    aspect-ratio: 1/1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 10%;
+    margin: auto;
+}
+
+.card-body>h5{
+    font-family: 'Khmer', sans-serif;
+    font-size: 27px;
+    font-weight: 400;
+    text-align: center;
+    /*position: absolute;
+    right: 20%;*/
+}
+
+.card-body>p{
+    font-family: 'Khmer', sans-serif;
+    font-size: 27px;
+    font-weight: 400;
+    text-align: center;
+    /*position: absolute;
+    right: 30%;
+    top: 40%;*/
+}
+
+/*.count_details>div{
     background-color: #C77DFF;
     width: 333px;
     height: 139px;
@@ -308,7 +397,7 @@ body {
     position: absolute;
     top: 45%;
     right: 25%;
-}
+}*/
 
 
 
