--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ h1, p, h2, h3, h4, ul, li, div {
 
 body {
     padding: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: Roboto;
 }
 
