complete the project

--- a/assets/css/orderForm.css
+++ b/assets/css/orderForm.css
@@ -57,7 +57,7 @@
 
 .card{
     width: 550px;
-    background-color: #ffffff;
+    background-color: #E5E5E5;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
